src/sass/components/_gallery.scss
.furniture-gallery {
  height: 600px;
  margin-bottom: 30px;

  .left-panel {
    height: 100%;

    .furniture-gallery-title {
      margin-bottom: 15px;

      .gallery-line {
        margin: 0 15px;
        border-bottom: 1px solid #2a2a2a;
        position: relative;

        &::before {
          content: "";
          position: absolute;
          bottom: -1px;
          width: 30px;
          border-bottom: 4px solid $primary;
          transform: translateX(-50%);
        }
      }

      p {
        color: #d58e32;
        font-weight: 500;
      }
    }

    .gallery-picture {
      background-color: #f3f4f6;
      border: 1px solid #e1e1e1;
      height: 550px;
      width: 100%;
      position: relative;

      .gallery-box {
        display: inline-block;
        border: 1px solid #e1e1e1;
        float: left;
        width: 25%;
        text-align: center;
        background-color: white;

        &:hover {
          color: $primary;
          border-top-color: $primary;
          border-bottom: none;
          background-color: #f3f4f6;
        }
      }

      .option-box-container {
        position: absolute;
        top: 200px;

        .option-box1 {
          height: 30px;
          width: 30px;
          border: 1px solid black;
          margin: 8px 0 8px 8px;
          display: flex;
          justify-content: center;
          align-items: center;
          background-color: #ffffff;

          &:hover {
            color: $primary;

            .tooltip1 {
              display: block;
            }
          }
        }

        .option-box2 {
          height: 30px;
          width: 30px;
          border: 1px solid black;
          margin: 8px 0 8px 8px;
          display: flex;
          justify-content: center;
          align-items: center;
          background-color: #ffffff;

          &:hover {
            color: $primary;

            .tooltip2 {
              display: block;
            }
          }
        }

        .option-box3 {
          height: 30px;
          width: 30px;
          border: 1px solid black;
          margin: 8px 0 8px 8px;
          display: flex;
          justify-content: center;
          align-items: center;
          background-color: #ffffff;

          &:hover {
            color: $primary;

            .tooltip3 {
              display: block;
            }
          }
        }

        .option-box4 {
          height: 30px;
          width: 30px;
          border: 1px solid black;
          margin: 8px 0 8px 8px;
          display: flex;
          justify-content: center;
          align-items: center;
          background-color: #ffffff;

          &:hover {
            color: $primary;

            .tooltip4 {
              display: block;
            }
          }
        }

        .tooltip1 {
          width: 85px;
          height: 30px;
          background: black;
          position: absolute;
          top: 8px;
          left: 55px;
          display: none;

          &:before {
            content: "";
            position: absolute;
            right: 100%;
            top: 10px;
            width: 0;
            height: 0;
            border-top: 5px solid transparent;
            border-right: 13px solid black;
            border-bottom: 5px solid transparent;
          }

          p {
            font-size: 11px;
            color: #ffffff;
            position: absolute;
            top: 6px;
            left: 1px;
          }
        }

        .tooltip2 {
          width: 70px;
          height: 30px;
          background: black;
          position: absolute;
          top: 46px;
          left: 55px;
          display: none;

          &:before {
            content: "";
            position: absolute;
            right: 100%;
            top: 10px;
            width: 0;
            height: 0;
            border-top: 5px solid transparent;
            border-right: 13px solid black;
            border-bottom: 5px solid transparent;
          }

          p {
            font-size: 11px;
            color: #ffffff;
            position: absolute;
            top: 6px;
            left: 8px;
          }
        }

        .tooltip3 {
          width: 88px;
          height: 30px;
          background: black;
          position: absolute;
          top: 84px;
          left: 55px;
          display: none;

          &:before {
            content: "";
            position: absolute;
            right: 100%;
            top: 10px;
            width: 0;
            height: 0;
            border-top: 5px solid transparent;
            border-right: 13px solid black;
            border-bottom: 5px solid transparent;
          }

          p {
            font-size: 11px;
            color: #ffffff;
            position: absolute;
            top: 6px;
            left: 1px;
          }
        }

        .tooltip4 {
          width: 70px;
          height: 30px;
          background: black;
          position: absolute;
          top: 122px;
          left: 55px;
          display: none;

          &:before {
            content: "";
            position: absolute;
            right: 100%;
            top: 10px;
            width: 0;
            height: 0;
            border-top: 5px solid transparent;
            border-right: 13px solid black;
            border-bottom: 5px solid transparent;
          }

          p {
            font-size: 11px;
            color: #ffffff;
            position: absolute;
            top: 6px;
            left: 3px;
          }
        }
      }

      .gallery-rating {
        height: 100px;
        width: 200px;
        background-color: #ffffff;
        position: absolute;
        bottom: 120px;
        right: 16px;
        display: flex;
        justify-content: center;

        .triangle-topleft {
          width: 0;
          height: 0;
          border-top: 30px solid black;
          border-right: 30px solid transparent;
          position: absolute;
          top: 0px;
          left: 0px;
        }

        .triangle-bottomright {
          width: 0;
          height: 0;
          border-bottom: 30px solid black;
          border-left: 30px solid transparent;
          position: absolute;
          right: 0px;
          bottom: 0px;
        }

        .sale-circle {
          width: 90px;
          height: 90px;
          background-color: #7b7b7c;
          opacity: 0.7;
          border-radius: 50%;
          position: absolute;
          bottom: 90px;
          display: flex;
          justify-content: center;

          .new-price {
            color: white;
            position: absolute;
            bottom: 25px;
            font-size: 18px;
            font-weight: 500;
          }

          .old-price {
            color: white;
            position: absolute;
            bottom: 0px;
            font-weight: 200;
            text-decoration: line-through;
          }
        }

        .stars {
          position: absolute;
          bottom: 20px;

          a {
            text-decoration: none;
            color: rgb(42, 42, 42);
            @extend .far;
            @extend .fa-star;

            &.full {
              @extend .fas;
            }
          }
        }

        p {
          position: absolute;
          bottom: 40px;
        }
      }

      .gallery-slider {
        height: 90px;
        background-color: #ffffff;
        position: absolute;
        bottom: 1px;
        width: 537px;
        display: flex;
        justify-content: center;
        align-items: center;
        justify-content: space-between;

        .gallery-slider-director {
          height: 70px;
          width: 30px;
          background-color: black;
          color: #ffffff;
          display: flex;
          justify-content: center;
          align-items: center;
          font-size: 12px;
          border: none;

          &:hover {
            color: $primary;
          }
        }

        .gallery-slider-box {
          height: 70px;
          width: 70px;
          background-color: #cbcbcb;
        }
      }
    }
  }

  .right-panel {
    height: 100%;
    background-color: rgb(231, 236, 246);
    font-weight: bold;

    .gallery-button {
      height: 35px;
      width: 90px;
      background-color: #79ad30;
      border-radius: 2px;
      font-size: 10px;
      border: none;
      color: #ffffff;
    }

    .right-panel-text {
      position: absolute;
      top: 50px;
      left: 60px;

      .right-panel-text-price {
        color: #79ad30;
        font-size: 30px;
      }

      .from {
        font-size: 18px;
      }

      .bedroom-bed {
        color: #d48d32;
        font-size: 30px;
      }
    }
  }
}

@media (max-width: 376px) {
  .furniture-gallery {
    max-height: 1200px;

    .left-panel-height {
      max-height: 150px;
    }

    .right-panel {
      max-height: 600px;
    }

    .left-panel {
      .gallery-picture {
        .gallery-box-featured {
          height: 52px;
          word-wrap: break-word;
        }

        .gallery-box-saleoff {
          height: 52px;
        }

        .gallery-slider {
          top: 458px;
          max-width: 100%;
        }

        .gallery-rating {
          top: 350px;
        }
      }
    }
  }
}

@media (max-width: 426px) {
  .furniture-gallery {
    max-height: 1200px;

    .left-panel-height {
      max-height: 150px;
    }

    .right-panel {
      max-height: 600px;
    }

    .left-panel {
      .gallery-picture {
        .gallery-slider {
          max-width: 100%;
        }
      }
    }
  }
}

@media (max-width: 768px) {
  .furniture-gallery {
    min-height: 1100px;

    .left-panel-height {
      max-height: 800px;
    }

    .right-panel {
      min-height: 450px;
    }

    .left-panel {
      .gallery-picture {
        .gallery-slider {
          min-width: 100%;
        }
      }
    }
  }
}

@media (max-width: 1024px) {
  .furniture-gallery {
    .left-panel {
      .gallery-picture {
        .gallery-slider {
          width: 100%;
        }
      }
    }
  }
}

